<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.fragments.photoshare.PhotoCaptureFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/background_dark">

        <com.traversoft.gdgphotoshare.ui.views.CameraPreview
            android:id="@+id/camera_preview_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"/>

        <ImageButton
            android:id="@+id/btnFlash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="20dp"
            android:background="@null"
            android:contentDescription="@string/toggle_flash"
            android:src="@drawable/camera_flash_auto" />

        <ImageButton
            android:id="@+id/btnTakePhoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:background="@null"
            android:contentDescription="@string/take_photo"
            android:src="@drawable/camera_take_photo"/>

        <ImageButton
            android:id="@+id/btnToggleCamera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/btnTakePhoto"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="20dp"
            android:layout_marginEnd="20dp"
            android:background="@null"
            android:contentDescription="@string/toggle_camera"
            android:src="@drawable/camera_switch" />

        <ImageButton
            android:id="@+id/btnViewGallery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/btnTakePhoto"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="20dp"
            android:layout_marginStart="20dp"
            android:background="@null"
            android:contentDescription="@string/tap_album"
            android:src="@drawable/camera_library" />

    </RelativeLayout>

</layout>